# MesstechnikPraktikumV4

./: LICENSE  README.md
hardware/SoftwareMeasServo/: platformio.ini
hardware/TumorHalter/: bottom.stl  bottomraise.stl  mid15.stl  mid30.stl  top.stl
hardware/cad/: Abdeckung_Sensorplatine.ipt  Abdeckung_Sensorplatine.stl  Flansch.stl  Flansch_Simple.ipt  Flansch_Simple.stl  Gesamt.iam  GesamtfurRos.stl  LowPolyMessplatine.stl  Nadel.ipt  NadelHalterLose.ipt  NadelhalterSchraub.ipt  (+1 more)
linux_helpers/: Connect_USB_realHelene.desktop  MTP_ResetEverything.desktop  MesstechnikPrakt_helene_sim_wo_nadel.desktop  Start_Small_DataLoggerMT.desktop  delete_icons.sh  install_icons.sh  messtechnik_praktikum_real_robot.desktop  messtechnik_praktikum_sim.desktop  student.desktop  update_script.sh
ros/src/messtechnik_praktikum/: CMakeLists.txt  package.xml
ros/src/messtechnik_praktikum/launch/: ConnectUSBRobot.launch  helper.launch  messtechnik_praktikum.launch
ros/src/messtechnik_praktikum/scripts/: data_log06-05-2022_17-05-49.csv  example.py  helper.py  messtechnik_helper.py  messtechnik_praktikum.py
ros/src/messtechnik_praktikum/src/: setup_scene.cpp
ros/src/messtechnik_praktikum/stl/: hollow_cylinder.stl
ros/src/messtechnik_praktikum/world/: praktikum.sdf
studentworkspace/: Auswertung.m  Auswertung_Matlab.m  Vorbereitungsaufgabe.py  data_log06-05-2022_12-53-45.csv  data_log06-05-2022_12-55-00.csv  data_log06-05-2022_13-17-51.csv  data_log13-06-2022_11-36-25.csv  data_log28-06-2022_18-08-37.csv  helene_helper.py  messtechnik_helper.py  student_script.py
(+39 files in other folders)
